# ruby

./: .bazelrc  .gitignore  BUILD.bazel  Gemfile  MODULE.bazel  README.md
.aspect/: config.axl  version.axl
.github/workflows/: ci.yaml
tools/: BUILD.bazel  repin
